--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "source": "src/index.ts",
   "main": "dist/index.js",
   "types": "dist/types.d.ts",
+  "browserslist": "> 0.25%",
+  "targets": {
+    "main": {
+      "includeNodeModules": true,
+      "outputFormat": "esmodule"
+    }
+  },
+  "engines": {
+    "browsers": "> 0.25%"
+  },
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -18,8 +28,10 @@
     "npm": "9.8.1"
   },
   "devDependencies": {
+    "@parcel/config-default": "^2.9.3",
     "@parcel/packager-ts": "^2.9.3",
     "@parcel/transformer-sass": "^2.9.3",
+    "@parcel/transformer-typescript-tsc": "^2.9.3",
     "@parcel/transformer-typescript-types": "^2.9.3",
     "parcel": "^2.9.3",
     "sass": "^1.64.1"
@@ -27,5 +39,8 @@
   "dependencies": {
     "typeface-quicksand": "^1.1.13",
     "typescript": "^5.1.6"
+  },
+  "@parcel/resolver-default": {
+    "packageExports": true
   }
 }
