--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
   "name": "multigraphic-theme",
-  "source": "src/index.ts",
-  "main": "dist/index.js",
-  "types": "dist/types.d.ts",
-  "browserslist": "> 0.25%",
-  "targets": {
-    "main": {
-      "includeNodeModules": true,
-      "outputFormat": "esmodule"
-    }
-  },
-  "engines": {
-    "browsers": "> 0.25%"
+  "source": "src/index.html",
+  "distDir": "dist",
+  "type": "module",
+  "parcel-namer-hashless": {
+    "include": [".js$", ".css$"],
+    "mode": "all"
   },
   "version": "1.0.0",
   "description": "",
@@ -34,6 +28,7 @@
     "@parcel/transformer-typescript-tsc": "^2.9.3",
     "@parcel/transformer-typescript-types": "^2.9.3",
     "parcel": "^2.9.3",
+    "parcel-namer-hashless": "^1.0.5",
     "sass": "^1.64.1"
   },
   "dependencies": {
