--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "@parcel/transformer-sass": "^2.9.3",
     "@parcel/transformer-typescript-tsc": "^2.9.3",
     "@parcel/transformer-typescript-types": "^2.9.3",
+    "@types/leaflet": "^1.9.3",
     "parcel": "^2.9.3",
     "parcel-namer-hashless": "^1.0.5",
     "sass": "^1.64.1"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "typeface-quicksand": "^1.1.13",
     "typescript": "^5.1.6"
   },
