--- a/package.json
+++ b/package.json
@@ -38,15 +38,18 @@
     "@types/leaflet": "^1.9.3",
     "parcel": "^2.9.3",
     "parcel-namer-hashless": "^1.0.5",
-    "sass": "^1.64.1"
+    "sass": "^1.67.0"
   },
   "dependencies": {
     "leaflet": "^1.9.4",
     "swiper": "^10.2.0",
     "typeface-quicksand": "^1.1.13",
-    "typescript": "^5.1.6"
+    "typescript": "^5.0.0"
   },
   "@parcel/resolver-default": {
     "packageExports": true
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
